# reitti

./: .gitignore  README.md  compose.yml  justfile
backend/: .env.example  README.md  config.py  justfile  main.py  pyproject.toml
backend/app/: frontend.py  validators.py
backend/app/routers/: distance.py  places.py  stops.py  trip.py
backend/app/schemas/: trip.py
backend/core/: __init__.py  db.py  dependencies.py  exceptions.py  geo.py  lazy_matrix.py  route_cache.py  route_optimizer.py  routing.py  stops.py  trips.py
backend/db/debug/: query_stops.sql
backend/db/migrations/: 0_init_db.sql  1_load_data.sql  2_init_geom.sql  3_stop_times_indexes.sql  4_stop_pair_avg_time.sql
backend/scripts/: extract_places.py
backend/tests/: test_lazy_matrix.py  test_places.py  test_route_optimizer.py  test_routing_geometry.py  test_trip_mapping.py  test_trip_optimize.py
experiments/: README.md  justfile  pyproject.toml
experiments/conf/: config.yaml
experiments/conf/handpicked/: boundary.yaml
experiments/conf/setup/: baseline.yaml  infeasible_sanity.yaml  network_stress.yaml  real_reference.yaml  window_stress.yaml
experiments/conf/suite/: bf_reference_small_n.yaml  handpicked_validation.yaml  (+3 more)
experiments/outputs/: aggregated.csv  results.csv
experiments/reports/: summary.md
experiments/tests/: test_algorithms.py  test_executor.py  test_io_results.py  test_matrices_fixture.py  test_metrics_feasibility.py  test_metrics_gap.py  test_metrics_speedup.py  test_plots_common.py  test_plots_prepare_filters.py  test_rows.py  test_scenarios.py  test_solver_adapter.py
(+101 files in other folders)
