[project]
name = "reitti-backend"
version = "0.1.0"
description = "API server for the Reitti project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]
scripts = [
    "osmium>=4.0.0",
    "tqdm>=4.67.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
