[project]
name = "reitti-experiments"
version = "0.1.0"
description = "Experiment runners and script-based reporting for Reitti route optimizer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.31.0",
    "hydra-core>=1.3.2",
    "httpx>=0.28.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pydantic>=2.13.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.11.13",
]

[project.scripts]
reitti-experiments = "experiments.app:main"

[tool.uv]
package = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B905"]

